# fftwpp

./: CMakeLists.txt  README  uninstall.cmake
include/: fftw_config.hpp  fftw_functions.hpp  fftw_vector.hpp  fftwpp.hpp
src/: CMakeLists.txt  fftw_functions.cpp
